--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_gap: ^1.2.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -22,7 +24,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
-    - assets/animations/
 
   fonts:
     - family: Rubik
