--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^16.2.4
   flutter_gap: ^1.2.0
+  gap: ^3.0.1
+  go_router: ^16.2.4
   pin_code_fields: ^8.0.1
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
