--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   flutter_svg: ^2.2.0
   simple_flutter_stepper: ^0.1.4
   easy_radio: ^0.0.3
-  
+  syncfusion_flutter_datepicker: ^31.1.21
+  intl: ^0.20.2
+  group_button: ^5.3.4
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
