PatientData & Notification UI completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   group_button: ^5.3.4
   device_preview: ^1.2.0
   roundcheckbox: ^2.0.5
+  image_picker: ^1.1.0
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
