--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,23 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  device_preview: ^1.2.0
+  dotted_border: ^2.1.0
+  easy_radio: ^0.0.3
   flutter:
     sdk: flutter
   flutter_gap: ^1.2.0
+  flutter_svg: ^2.2.0
   gap: ^3.0.1
   go_router: ^16.2.4
-  pin_code_fields: ^8.0.1
-  flutter_svg: ^2.2.0
-  simple_flutter_stepper: ^0.1.4
-  easy_radio: ^0.0.3
-  syncfusion_flutter_datepicker: ^31.1.21
-  intl: ^0.20.2
   group_button: ^5.3.4
-  device_preview: ^1.2.0
-  roundcheckbox: ^2.0.5
   image_picker: ^1.1.0
-  dotted_border: ^2.1.0
+  intl: ^0.20.2
+  pin_code_fields: ^8.0.1
+  roundcheckbox: ^2.0.5
+  simple_flutter_stepper: ^0.1.4
+  smooth_page_indicator: ^1.2.1
+  syncfusion_flutter_datepicker: ^31.1.21
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
@@ -49,7 +50,7 @@ flutter:
           weight: 700
         - asset: assets/fonts/Rubik-ExtraBold.ttf
           weight: 800
-    - family: PT Serif 
+    - family: PT Serif
       fonts:
         - asset: assets/fonts/PTSerif-Regular.ttf
           weight: 400
@@ -59,4 +60,3 @@ flutter:
           weight: 600
         - asset: assets/fonts/PTSerif-Bold.ttf
           weight: 700
-
