--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   device_preview: ^1.2.0
   dotted_border: ^2.1.0
   easy_radio: ^0.0.3
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
   flutter:
     sdk: flutter
   flutter_gap: ^1.2.0
