--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   group_button: ^5.3.4
   image_picker: ^1.1.0
   intl: ^0.20.2
+  lottie: ^3.3.2
   pin_code_fields: ^8.0.1
   roundcheckbox: ^2.0.5
   simple_flutter_stepper: ^0.1.4
