--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   file_picker: ^10.3.3
   firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
+  permission_handler: ^11.0.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
